# tforget

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md
.claude/agents/: figma-code-reader.md  librarian.md
.claude/commands/: commit.md  develop.md  discuss.md  spec.md  team-cleanup.md  team-develop.md
.claude/skills/git-commit/: SKILL.md
.codex/skills/develop/: SKILL.md
.codex/skills/develop/agents/: openai.yaml
.codex/skills/discuss/: SKILL.md
.codex/skills/figma-code-reader/: SKILL.md
.codex/skills/librarian/: SKILL.md
.codex/skills/spec/: SKILL.md
docs/plans/: 2026-02-22-spec-architecture-design.md  2026-02-22-spec-architecture-plan.md  tforge-design.md  tforge-implementation-plan.md
docs/spec/: README.md  architecture.md  features.md  project.md  templates.md
src/: cli.rs  condition.rs  config.rs  embedded.rs  engine.rs  executor.rs  lib.rs  main.rs  prompts.rs  registry.rs  remote.rs  renderer.rs  resolver.rs  state.rs  toolcheck.rs  types.rs
src/llm/: anthropic.rs  mod.rs  openai.rs
templates/axum-server/: template.toml
templates/firebase-flutter/: template.toml
templates/firebase-project/: template.toml
templates/flutter-app/: template.toml
templates/gcp-appengine/: template.toml
templates/gcp-cloudsql/: template.toml
templates/gcp-project/: template.toml
tests/: cli_test.rs  condition_test.rs  config_test.rs  embedded_test.rs  engine_test.rs  executor_test.rs  llm_test.rs  prompts_test.rs  registry_test.rs  remote_test.rs  renderer_test.rs  resolver_test.rs  state_test.rs  toolcheck_test.rs  types_test.rs
(+5 files in other folders)
