[package]
name = "tforge"
version = "0.1.0"
edition = "2024"
description = "Project builder CLI — scaffold multi-stack projects with cloud provisioning"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
inquire = "0.9"
minijinja = { version = "2", features = ["builtins"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
tokio = { version = "1", features = ["rt", "macros", "process", "fs"] }
rig-core = "0.31"
indicatif = "0.17"
owo-colors = "4"
rust-embed = "8"
keyring = "3"
dirs = "6"
thiserror = "2"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
